first cleanup code